fixed DATA_PATH variable error in the first cell of mushrooms ipynb

--- a/notebooks/01b_impurity_measures_mushrooms.ipynb
+++ b/notebooks/01b_impurity_measures_mushrooms.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1dffe13",
    "metadata": {},
    "outputs": [
@@ -50,9 +50,7 @@
     "\n",
     "# Αν το notebook βρίσκεται στον φάκελο notebooks/, τότε το ROOT είναι ένας κατάλογος πάνω\n",
     "ROOT = Path(\"..\").resolve()\n",
-    "DATA_PATH = ROOT / \"data\" / \"mushrooms.csv\"\n",
-    "\n",
-    "DATA_PATH"
+    "DATA_PATH = ROOT / \"data\" / \"mushrooms.csv\""
    ]
   },
   {
