Add polynomial regression theory and comparison plots for degrees 0-3 in house prices notebook; update training script to generate scatter plots for all models (Linear, Ridge, Lasso)

--- a/notebooks/01_decision_trees_titanic.ipynb
+++ b/notebooks/01_decision_trees_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9d91643",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Decision Trees on Titanic (Classification)\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba4dd8b",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21df15fa",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213251b5",
+   "id": "3",
    "metadata": {},
    "source": [
     "## Επιλογή χαρακτηριστικών & προεπεξεργασία\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96837dc",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c359da8",
+   "id": "5",
    "metadata": {},
    "source": [
     "## Εκπαίδευση δέντρου με διαφορετικά κριτήρια (Gini / Entropy)\n"
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956445cc",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50ea98e",
+   "id": "7",
    "metadata": {},
    "source": [
     "## 📊 Ερμηνεία Μετρικών Απόδοσης (Classification Metrics)\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452cf110",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Underfitting / Overfitting: επίδραση του `max_depth`\n"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5adc43ab",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d61a100",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d100187d",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Οπτικοποίηση δέντρου (μικρό βάθος)\n",
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0afceb",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bafd9c0",
+   "id": "13",
    "metadata": {},
    "source": [
     "## 🌳 Σημασία χαρακτηριστικών (Feature Importances)\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb7b922",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "265cb4d6",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Inference για έναν νέο επιβάτη\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d15598",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.12)",
+   "display_name": "adv-ai (.venv 3.11)",
    "language": "python",
-   "name": "python3"
+   "name": "adv-ai-venv-3.11"
   },
   "language_info": {
    "codemirror_mode": {
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
