Complete Multinomial Naive Bayes SMS spam classification
- Add comprehensive SMS Spam notebook with pedagogical annotations in Greek
- Implement data loading with latin-1 encoding (CSV fix)
- Add column mapping and label normalization (v1/v2 -> label/text)
- Include TfidfVectorizer with English stopwords filtering
- Add detailed theory cells: Confusion Matrix, Precision/Recall/F1 metrics
- Implement alpha parameter sweep with corrected methodology
- Add detailed line-by-line Greek comments to all evaluation code
- Create optimal model with alpha=0.01 (F1=0.9066)
- Fix train_naive_bayes_sms.py with latin-1 encoding and data cleanup
- Generate confusion matrix PNG and model persistence
- All tests pass, training script validates successfully

--- a/notebooks/04_bayesian_networks_intro.ipynb
+++ b/notebooks/04_bayesian_networks_intro.ipynb
@@ -5,9 +5,309 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Bayesian Belief Networks (placeholder)\n",
     "\n",
-    "This notebook will introduce Bayesian Networks with a small toy example."
+    "# Εισαγωγή στα Bayesian Networks – Student Network\n",
+    "\n",
+    "Σε αυτό το notebook θα δούμε ένα κλασικό παράδειγμα **Bayesian Network**\n",
+    "(το *Student network*) και θα εκτελέσουμε βασικά ερωτήματα inference.\n",
+    "\n",
+    "## Στόχοι\n",
+    "\n",
+    "- Να ορίσουμε τη δομή (DAG) ενός Bayesian Network με `pgmpy`.\n",
+    "- Να ορίσουμε τους πίνακες πιθανοτήτων (CPDs) για κάθε κόμβο.\n",
+    "- Να χρησιμοποιήσουμε τον αλγόριθμο Variable Elimination για inference.\n",
+    "- Να απεικονίσουμε εποπτικά κάποιες posterior πιθανότητες.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Θεωρία: Bayesian Networks\n",
+    "\n",
+    "Ένα **Bayesian Network** είναι ένα κατευθυνόμενο ακύκλο γράφημα (DAG)\n",
+    "όπου κάθε κόμβος αντιστοιχεί σε μια τυχαία μεταβλητή και κάθε τόξο\n",
+    "εκφράζει μία άμεση πιθανολογική εξάρτηση.\n",
+    "\n",
+    "Αν έχουμε μεταβλητές $X_1, \\dots, X_n$ και για κάθε $X_i$ το σύνολο\n",
+    "γονέων $\\mathrm{Pa}(X_i)$ στο γράφημα, τότε η κοινή κατανομή γράφεται:\n",
+    "\n",
+    "$$\n",
+    "P(X_1, \\dots, X_n) = \\prod_i P\\bigl(X_i \\mid \\mathrm{Pa}(X_i)\\bigr)\n",
+    "$$\n",
+    "\n",
+    "Η τοπική δομή του γράφου κωδικοποιεί conditional independencies\n",
+    "ανάμεσα στις μεταβλητές, γεγονός που επιτρέπει πιο αποδοτικό\n",
+    "inference σε σχέση με την πλήρη κοινή κατανομή.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Το Student network\n",
+    "\n",
+    "Χρησιμοποιούμε το κλασικό παράδειγμα *Student* με τις μεταβλητές:\n",
+    "\n",
+    "- `Difficulty` ∈ {`easy`, `hard`}\n",
+    "- `Intelligence` ∈ {`low`, `high`}\n",
+    "- `Grade` ∈ {`A`, `B`, `C`}\n",
+    "- `SAT` ∈ {`low`, `high`}\n",
+    "- `Letter` ∈ {`weak`, `strong`}\n",
+    "\n",
+    "Δομή:\n",
+    "\n",
+    "- `Difficulty → Grade`\n",
+    "- `Intelligence → Grade`\n",
+    "- `Intelligence → SAT`\n",
+    "- `Grade → Letter`\n",
+    "\n",
+    "Η κοινή κατανομή παραγοντοποιείται ως:\n",
+    "\n",
+    "$$\n",
+    "P(D, I, G, S, L) = P(D) P(I) P(G \\mid D, I) P(S \\mid I) P(L \\mid G)\n",
+    "$$\n",
+    "\n",
+    "όπου:\n",
+    "\n",
+    "- $D$ = Difficulty,\n",
+    "- $I$ = Intelligence,\n",
+    "- $G$ = Grade,\n",
+    "- $S$ = SAT,\n",
+    "- $L$ = Letter.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Imports για Bayesian Networks με pgmpy\n",
+    "\n",
+    "from pgmpy.models import BayesianModel\n",
+    "from pgmpy.factors.discrete import TabularCPD\n",
+    "from pgmpy.inference import VariableElimination\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Ορίζουμε τη δομή (DAG) του Student Network\n",
+    "\n",
+    "model = BayesianModel(\n",
+    "    [\n",
+    "        (\"Difficulty\", \"Grade\"),\n",
+    "        (\"Intelligence\", \"Grade\"),\n",
+    "        (\"Intelligence\", \"SAT\"),\n",
+    "        (\"Grade\", \"Letter\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Ορίζουμε τα CPDs (πιθανότητες είναι διδακτικές, όχι πραγματικά δεδομένα)\n",
+    "\n",
+    "cpd_difficulty = TabularCPD(\n",
+    "    variable=\"Difficulty\",\n",
+    "    variable_card=2,\n",
+    "    values=[[0.6], [0.4]],\n",
+    "    state_names={\"Difficulty\": [\"easy\", \"hard\"]},\n",
+    ")\n",
+    "\n",
+    "cpd_intelligence = TabularCPD(\n",
+    "    variable=\"Intelligence\",\n",
+    "    variable_card=2,\n",
+    "    values=[[0.7], [0.3]],\n",
+    "    state_names={\"Intelligence\": [\"low\", \"high\"]},\n",
+    ")\n",
+    "\n",
+    "cpd_grade = TabularCPD(\n",
+    "    variable=\"Grade\",\n",
+    "    variable_card=3,\n",
+    "    values=[\n",
+    "        [0.30, 0.05, 0.90, 0.50],  # P(G=A | I,D)\n",
+    "        [0.40, 0.25, 0.08, 0.30],  # P(G=B | I,D)\n",
+    "        [0.30, 0.70, 0.02, 0.20],  # P(G=C | I,D)\n",
+    "    ],\n",
+    "    evidence=[\"Intelligence\", \"Difficulty\"],\n",
+    "    evidence_card=[2, 2],\n",
+    "    state_names={\n",
+    "        \"Grade\": [\"A\", \"B\", \"C\"],\n",
+    "        \"Intelligence\": [\"low\", \"high\"],\n",
+    "        \"Difficulty\": [\"easy\", \"hard\"],\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "cpd_sat = TabularCPD(\n",
+    "    variable=\"SAT\",\n",
+    "    variable_card=2,\n",
+    "    values=[\n",
+    "        [0.95, 0.20],  # P(SAT=low  | I)\n",
+    "        [0.05, 0.80],  # P(SAT=high | I)\n",
+    "    ],\n",
+    "    evidence=[\"Intelligence\"],\n",
+    "    evidence_card=[2],\n",
+    "    state_names={\n",
+    "        \"SAT\": [\"low\", \"high\"],\n",
+    "        \"Intelligence\": [\"low\", \"high\"],\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "cpd_letter = TabularCPD(\n",
+    "    variable=\"Letter\",\n",
+    "    variable_card=2,\n",
+    "    values=[\n",
+    "        [0.10, 0.40, 0.90],  # P(L=weak   | G)\n",
+    "        [0.90, 0.60, 0.10],  # P(L=strong | G)\n",
+    "    ],\n",
+    "    evidence=[\"Grade\"],\n",
+    "    evidence_card=[3],\n",
+    "    state_names={\n",
+    "        \"Letter\": [\"weak\", \"strong\"],\n",
+    "        \"Grade\": [\"A\", \"B\", \"C\"],\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "model.add_cpds(\n",
+    "    cpd_difficulty,\n",
+    "    cpd_intelligence,\n",
+    "    cpd_grade,\n",
+    "    cpd_sat,\n",
+    "    cpd_letter,\n",
+    ")\n",
+    "\n",
+    "# Έλεγχος ορθότητας του μοντέλου\n",
+    "model.check_model()\n",
+    "\n",
+    "print(\"Κόμβοι:\", list(model.nodes()))\n",
+    "print(\"Τόξα:\", list(model.edges()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Εμφανίζουμε τα CPDs για να τα δούμε/σχολιάσουμε\n",
+    "\n",
+    "for cpd in model.get_cpds():\n",
+    "    print(cpd)\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Ορίζουμε έναν inference engine (Variable Elimination)\n",
+    "\n",
+    "infer = VariableElimination(model)\n",
+    "\n",
+    "# Παράδειγμα 1: P(Grade | Difficulty=hard, Intelligence=high)\n",
+    "q1 = infer.query(\n",
+    "    variables=[\"Grade\"],\n",
+    "    evidence={\"Difficulty\": \"hard\", \"Intelligence\": \"high\"},\n",
+    "    show_progress=False,\n",
+    ")\n",
+    "print(\"P(Grade | Difficulty=hard, Intelligence=high):\")\n",
+    "print(q1)\n",
+    "print()\n",
+    "\n",
+    "# Παράδειγμα 2: P(Intelligence | Grade=A, SAT=high)\n",
+    "q2 = infer.query(\n",
+    "    variables=[\"Intelligence\"],\n",
+    "    evidence={\"Grade\": \"A\", \"SAT\": \"high\"},\n",
+    "    show_progress=False,\n",
+    ")\n",
+    "print(\"P(Intelligence | Grade=A, SAT=high):\")\n",
+    "print(q2)\n",
+    "print()\n",
+    "\n",
+    "# Παράδειγμα 3: P(Intelligence | Letter=strong)\n",
+    "q3 = infer.query(\n",
+    "    variables=[\"Intelligence\"],\n",
+    "    evidence={\"Letter\": \"strong\"},\n",
+    "    show_progress=False,\n",
+    ")\n",
+    "print(\"P(Intelligence | Letter=strong):\")\n",
+    "print(q3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Εποπτική απεικόνιση: πώς αλλάζει η κατανομή του Intelligence\n",
+    "# όταν προσθέτουμε evidence στο Letter.\n",
+    "\n",
+    "# 1) Prior P(Intelligence)\n",
+    "prior_I = infer.query(variables=[\"Intelligence\"], show_progress=False)\n",
+    "\n",
+    "# 2) Posterior P(Intelligence | Letter=weak)\n",
+    "post_I_weak = infer.query(\n",
+    "    variables=[\"Intelligence\"],\n",
+    "    evidence={\"Letter\": \"weak\"},\n",
+    "    show_progress=False,\n",
+    ")\n",
+    "\n",
+    "# 3) Posterior P(Intelligence | Letter=strong)\n",
+    "post_I_strong = infer.query(\n",
+    "    variables=[\"Intelligence\"],\n",
+    "    evidence={\"Letter\": \"strong\"},\n",
+    "    show_progress=False,\n",
+    ")\n",
+    "\n",
+    "states = [\"low\", \"high\"]\n",
+    "\n",
+    "prior_vals = [prior_I.values[0], prior_I.values[1]]\n",
+    "weak_vals = [post_I_weak.values[0], post_I_weak.values[1]]\n",
+    "strong_vals = [post_I_strong.values[0], post_I_strong.values[1]]\n",
+    "\n",
+    "# Για απλότητα, κάνουμε τρία ξεχωριστά bar plots\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(states, prior_vals)\n",
+    "ax.set_title(\"P(Intelligence) (prior)\")\n",
+    "ax.set_ylabel(\"Πιθανότητα\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(states, weak_vals)\n",
+    "ax.set_title(\"P(Intelligence | Letter=weak)\")\n",
+    "ax.set_ylabel(\"Πιθανότητα\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.bar(states, strong_vals)\n",
+    "ax.set_title(\"P(Intelligence | Letter=strong)\")\n",
+    "ax.set_ylabel(\"Πιθανότητα\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
