Notebooks: interactive GaussianNB update, Matplotlib-only visuals & docs; add mushroom image
- 03a_gaussian_nb_iris.ipynb: Reworked interactive widget using ipywidgets Output + .observe; separate text and figure outputs; update sample marker in-place via set_offsets; added SHOW_STATIC_PLOTS toggle; enforced inline backend; documented Bayes/log-scale details in README.\n- Other notebooks: replaced seaborn visuals with Matplotlib grouped plots; unified colormap usage; simplified code for learners.\n- bayesian_learning/README.md: clarified GaussianNB theory and log-scale discussion; added note to store model artifacts locally.\n- Added 'ai_poisoning_mushrooms.jpg' under notebooks/images for the mushrooms notebook.

--- a/notebooks/01b_impurity_measures_mushrooms.ipynb
+++ b/notebooks/01b_impurity_measures_mushrooms.ipynb
@@ -367,9 +367,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "![Μπορεί να φάει κάποιος αυτό το μανιτάρι;](images/ai_poisoning_mushrooms.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,13 +430,19 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adv-ai (.venv 3.11)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "adv-ai-venv-3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
