--- a/notebooks/02_regression_house_prices.ipynb
+++ b/notebooks/02_regression_house_prices.ipynb
@@ -708,9 +708,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adv-ai (.venv 3.11)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "adv-ai-venv-3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
