--- a/notebooks/02b_regularization_ridge_lasso.ipynb
+++ b/notebooks/02b_regularization_ridge_lasso.ipynb
@@ -522,9 +522,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adv-ai (.venv 3.11)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "adv-ai-venv-3.11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
